fix(css): text wrap in code blocks

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -118,6 +118,11 @@
   .prose blockquote p:last-of-type::after {
     content: "";
   }
+
+  code {
+    white-space: pre;
+    overflow: scroll;
+  }
 }
 
 @layer components {
